Eerste penningmeester dingen onder /ongeveer, banktransacties uploaden, banktransacties mathcen

--- a/src/style/colors.css
+++ b/src/style/colors.css
@@ -19,6 +19,8 @@
 
 	--border-color: var(--grey-color);
 	--button-text-color: var(--light-color);
+
+  --logo-color: var(--primary-color);
 }
 
 /* Dark mode root */
@@ -37,6 +39,8 @@
 
 	/* --shadow-color: rgba(var(--light-color), 0.5); */
 	--shadow-color: rgba(255, 255, 255, 0.1);
+
+  --logo-color: #c990ff;
 }
 
 :root.light {
