--- a/src/style/themes/_dark.scss
+++ b/src/style/themes/_dark.scss
@@ -24,6 +24,9 @@
 	--color-form-focus: var(--color-primary);
 	--color-form-bg: #1b1b1bb9;
 
+  --color-primary-text: #c990ff;
+  --color-logo: var(--color-primary-text);
+
 	.form-group {
 		label {
 			color: var(--color-text);
@@ -33,30 +36,19 @@
 	.ibs-error-page {
 		background-color: var(--color-bg-base);
 
-		color: #c990ff;
+		color: var(--color-primary-text);
 
 		code {
-			color: #c990ff;
+			color: var(--color-primary-text);
 		}
 	}
 
 	a,
 	button.btn-a {
-		color: #c990ff;
+		color: var(--color-primary-text);
 	}
 
 	a.button {
 		color: white;
-	}
-
-	.layout--navbar {
-		.logo {
-			svg {
-				path,
-				rect {
-					fill: #c990ff;
-				}
-			}
-		}
 	}
 }
