Setup super forms and flash messages

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@
 @use './style/components/profile-icon';
 @use './style/components/chip';
 @use './style/components/comment';
+@use './style/components/toast';
 
 @use './style/themes/dark';
 @use './style/themes/feut';
