Refactor nav styles

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,7 @@
 @use './style/variables';
 @use './style/layout';
+@use './style/ongeveer';
+
 @use './style/components/typography';
 @use './style/components/button';
 @use './style/components/table';
