--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -19,7 +19,7 @@ button {
 	color: var(--color-text-light);
 	background-color: var(--color-primary);
 
-  &[disabled] {
+  &[disabled], &.disabled {
     cursor: not-allowed;
     background-color: var(--color-disabled) !important;
 
@@ -34,6 +34,10 @@ a.button {
 
 	text-decoration: none;
 	text-align: center;
+
+  &.disabled {
+    @extend button, [disabled]
+  }
 }
 
 label.button {
