Match banktransaction rewrite

--- a/src/style/themes/_dark.scss
+++ b/src/style/themes/_dark.scss
@@ -27,6 +27,9 @@
   --color-primary-text: #c990ff;
   --color-logo: var(--color-primary-text);
 
+  --color-warning: #96600E;
+  --color-danger: #842626;
+
 	.form-group {
 		label {
 			color: var(--color-text);
