--- a/src/app.scss
+++ b/src/app.scss
@@ -18,10 +18,13 @@
 @use './style/themes/dark';
 @use './style/themes/feut';
 @use './style/themes/dies';
+@use './style/themes/invakancie25';
 
 @font-face {
 	font-family: SegoeUI;
-	src: local('Segoe UI'), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format('woff2'),
+	src:
+		local('Segoe UI'),
+		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format('woff2'),
 		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format('woff'),
 		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format('truetype');
 	font-weight: 400;
@@ -29,7 +32,9 @@
 
 @font-face {
 	font-family: SegoeUI;
-	src: local('Segoe UI Bold'), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format('woff2'),
+	src:
+		local('Segoe UI Bold'),
+		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format('woff2'),
 		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format('woff'),
 		url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format('truetype');
 	font-weight: 600;
