--- a/src/style/themes/_invakancie25.scss
+++ b/src/style/themes/_invakancie25.scss
@@ -17,6 +17,11 @@
 		tr:nth-child(even):not(.highlight) {
 			background-color: #{$red};
 			color: white;
+
+			a {
+				color: white;
+				text-decoration: underline;
+			}
 		}
 	}
 
