--- a/emails/new-activity/html.pug
+++ b/emails/new-activity/html.pug
@@ -2,13 +2,13 @@ extends ../content.pug
 
 block content
   p.
-    Er staat een geweldige nieuwe activiteit op de planning bij Invictus 🎉
+    Iemand heeft een nieuwe activiteit aangemaakt genaamd #{activity.name}
 
-  p 🎈 Wat? #{activity.name}
-  p 📅 Wanneer? #{date}
-  p 🏠 Waar? #{location}
-  p 💼 Wie? #{committee.name} 
-  p 📝 Omschrijving: #{activity.description}
+  p.
+    Deze activiteit zal plaats vinden op #{date} te #{location} en wordt georganiseerd door de volgende commissie: #{committee.name}
+
+  p.
+    Omschrijving: #{activity.description}
 
   <!--[if true]>
     div(style='margin-bottom: 16px;')
