style: Use Comic Neue instead of Comic Sans, and Ubuntu instead of loading in SegoeUI

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -52,7 +52,7 @@
 		Font
 	*/
 	--font-family: Ubuntu, sans-serif;
-	--font-family-text: SegoeUI, 'Open Sans', sans-serif;
+	--font-family-text: Ubuntu, sans-serif;
 	--icon-vertical-align: -0.25em;
 	--icon-size: 20px;
 
